# home-accounting

./: README.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/github/ulresh/homeaccounting/model/: Jsonl.kt  JsonlStream.kt  Model.kt  Store.kt
android/app/src/main/java/com/github/ulresh/homeaccounting/sync/: Crypto.kt  Qr.kt  SyncService.kt
android/app/src/main/java/com/github/ulresh/homeaccounting/ui/: MainActivity.kt  ScannerActivity.kt
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/github/ulresh/homeaccounting/: StoreSyncTest.kt  XCompatTest.kt
claude/memory/: MEMORY.md  build-workflow.md  sync-streaming-arch.md
claude/workspace/: CLAUDE.md
desktop/: CMakeLists.txt
desktop/src/: main.cpp  shorts.h
desktop/src/model/: Jsonl.cpp  Jsonl.h  Paths.cpp  Paths.h  Store.cpp  Store.h  Types.h
desktop/src/sync/: Crypto.cpp  Crypto.h  QrCode.cpp  QrCode.h  SyncService.cpp  SyncService.h
desktop/src/ui/: CatalogDialog.cpp  CatalogDialog.h  EventDialog.cpp  EventDialog.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  SyncDialog.cpp  SyncDialog.h
desktop/tools/: catfiltertest.cpp  guitest.cpp  modeltest.cpp  synctest.cpp  syncv2test.cpp  xcompattest.cpp
note/: ai-r.txt  ai.txt  data.txt
